--- a/inspire.html
+++ b/inspire.html
@@ -5,7 +5,7 @@
     <body>
         <h1>Seth Rogan.</h1>
         <h2>Portrait</h2>
-        <img src="https://www.britannica.com/biography/Seth-Rogen/images-videos#/media/1/1537398/239924" alt="MLK">
+        <img src="https://cdn.britannica.com/18/205618-050-7CC082C1/Seth-Rogen-2019.jpg" alt="Seth">
         <h2>What makes a hero?</h2>
         <p>A hero is someone that we look up to. Heroes are someone that we strive to be.</p>
         <p>Seth Rogan, although not the most influential of people, is who comes to mind when I think of who has inspired me throuout my life. He has been in many movies I watched growing up and has never failed to make me laugh. Although he grew up having some small rolls he has never given up on who he wants to be. </p>
