--- a/amuse.html
+++ b/amuse.html
@@ -8,12 +8,12 @@
       <h1>LOL That's Funny!</h1>
       <h2>The Duck Song</h2>
       <p>The duck song was imprinted in my brain since elementary school and continues to amuse me.</p>
-      <a href="https://www.youtube.com/watch?v=MtN1YnoL46Q">Link</a>a>
+      <a href="https://www.youtube.com/watch?v=MtN1YnoL46Q">Link</a>
       <h2>Amusing... The Definition</h2>
       <p>What is more amusing than the definition of amusing itself?</p>
-      <a href="https://www.dictionary.com/browse/amusing">Link</a>a>
+      <a href="https://www.dictionary.com/browse/amusing">Link</a>
       <h2>Dogs</h2>
       <p>Funny dog pictures, what could be more funny.</p>
-      <a href="https://www.boredpanda.com/hilarious-dogs-pictures/?utm_source=google&utm_medium=organic&utm_campaign=organic">Link</a>a>
+      <a href="https://www.boredpanda.com/hilarious-dogs-pictures/?utm_source=google&utm_medium=organic&utm_campaign=organic">Link</a>
     </body>
 </html>
