--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+      <meta charset="UTF-8">
+        <title>Template</title>
+    </head>
+    <body>
+      <h1>My homepage</h1>
+      <img src="logo.png.png" alt="UNC Logo">
+      <p>
+          <a href="amuse.html">Amuse Me</a>
+      </p>
+      <p>
+          <a href="inspire.html">Inspire Me</a>
+      </p>
+      <p>
+          <a href="profile.html">My Profile</a>
+      </p>
+      
+      <p>
+          <a href="amuse.html">Amuse Me</a>
+        </p>
+    </body>
+</html>
 
