--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </p>
       
       <p>
-          <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fhttps://j-suits.github.io/index.html">Validate my page!</a>
+          <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fj-suits.github.io%2Findex.html">Validate my page!</a>
         </p>
     </body>
 </html>
