--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <h1>My homepage</h1>
-      <img src="logo.png.png" alt="UNC Logo">
+      <img src="images\logo.png.png" alt="UNC Logo">
       <p>
           <a href="amuse.html">Amuse Me</a>
       </p>
