--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Jenna Suits</h1>
-        <img src="images/profile.2.png" alt="pic of Jenna Suits" width="300">
+        <img src="profile.2.png" alt="pic of Jenna Suits" width="300">
         <div id="interests">
         <p>I have a dog named Cash, I am a tattoo apprentice, and I like playing videogames.</p>
         </div>  
