--- a/template.html
+++ b/template.html
@@ -1,10 +1,12 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Template</title>
+        <meta charset="UTF-8">
+        <title>Page Title</title>
     </head>
     <body>
-        <h1>Page Title</h1>
+        <h1>Page Heading</h1>
+        <img src="logo.png.png" alt="UNC Logo">
     </body>
 </html>
