--- a/educate.html
+++ b/educate.html
@@ -3,10 +3,19 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Page Title</title>
+        <title>Educate Me</title>
     </head>
     <body>
-        <h1>Page Heading</h1>
-        <img src="logo.png.png" alt="UNC Logo">
+        <h1>Educate Me</h1>
+        <section>
+            <h2>TED Talks</h2>
+            <iframe src="https://www.ted.com/talks/robert_waldinger_what_makes_a_good_life_lessons_from_the_longest_study_on_happiness?referrer=playlist-the_10_most_popular_tedx_talks&autoplay=true"width="800" height="500"></iframe>
+            <iframe src="https://www.ted.com/talks/thomas_suarez_a_12_year_old_app_developer?referrer=playlist-the_10_most_popular_tedx_talks&autoplay=true" width="800" height="500"></iframe>
+
+        </section>
+        <section>
+            <h2>RSA Animations</h2>
+
+        </section>
     </body>
 </html>
