--- a/educate.html
+++ b/educate.html
@@ -9,12 +9,24 @@
         <h1>Educate Me</h1>
         <section>
             <h2>TED Talks</h2>
-            <iframe src="https://www.ted.com/talks/robert_waldinger_what_makes_a_good_life_lessons_from_the_longest_study_on_happiness?referrer=playlist-the_10_most_popular_tedx_talks&autoplay=true"width="800" height="500"></iframe>
-            <iframe src="https://www.ted.com/talks/thomas_suarez_a_12_year_old_app_developer?referrer=playlist-the_10_most_popular_tedx_talks&autoplay=true" width="800" height="500"></iframe>
+            <div style="max-width:854px">
+                <div style="position:relative;height:0;padding-bottom:56.25%">
+                    <iframe src="https://embed.ted.com/talks/lang/en/sir_ken_robinson_do_schools_kill_creativity" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div style="max-width:854px">
+                <div style="position:relative;height:0;padding-bottom:56.25%">
+                    <iframe src="https://embed.ted.com/talks/lang/en/sam_berns_my_philosophy_for_a_happy_life" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                </div>
+            </div>
 
         </section>
         <section>
             <h2>RSA Animations</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/12XG-joFRBY?si=04i79kV6OsM77rkk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Yl9TVbAal5s?si=xEIp7L9Fruwsvqo6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            
 
         </section>
     </body>
