--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       
       <p>
           <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fj-suits.github.io%2Findex.html">Validate my page!</a>
-        </p>
+      </p>
+      <p>
+          <a href="educate.html">Educate Me</a>
+      </p>
     </body>
 </html>
 
