--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <p>
           <a href="educate.html">Educate Me</a>
       </p>
+      <p>
+          <a href="test.html">Test</a>
+      </p>
     </body>
 </html>
 
