--- a/amuse.html
+++ b/amuse.html
@@ -15,5 +15,8 @@
       <h2>Dogs</h2>
       <p>Funny dog pictures, what could be more funny.</p>
       <a href="https://www.boredpanda.com/hilarious-dogs-pictures/?utm_source=google&utm_medium=organic&utm_campaign=organic">Link</a>
+      <br>
+      <br>
+      <a href="index.html"><img src="images/button.png" alt="Home Button"></a>
     </body>
 </html>
