--- a/educate.html
+++ b/educate.html
@@ -29,5 +29,8 @@
 
 
         </section>
+        <br>
+        <br>
+        <a href="index.html"><img src="images/button.png" alt="Home Button"></a>
     </body>
 </html>
