--- a/inspire.html
+++ b/inspire.html
@@ -10,5 +10,8 @@
         <p>A hero is someone that we look up to. Heroes are someone that we strive to be.</p>
         <p>Seth Rogan, although not the most influential of people, is who comes to mind when I think of who has inspired me throuout my life. He has been in many movies I watched growing up and has never failed to make me laugh. Although he grew up having some small rolls he has never given up on who he wants to be. </p>
         <p><a href="https://www.britannica.com/biography/Seth-Rogen">Learn More ...</a></p>
+        <br>
+        <br>
+        <a href="index.html"><img src="images/button.png" alt="Home Button"></a>
     </body>
 </html>
