--- a/profile.html
+++ b/profile.html
@@ -10,5 +10,8 @@
         <div id="interests">
         <p>I have a dog named Cash, I am a tattoo apprentice, and I like playing videogames.</p>
         </div>  
+        <br>
+        <br>
+        <a href="index.html"><img src="images/button.png" alt="Home Button"></a>
     </body>
 </html>
