--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <li>
             <a href="educate.html">Educate Me</a>
         </li>
+        <li>
+            <a href="superhero.html">Favorite Superheroes</a>
+        </li>
         </ul>
         <p>
             <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fj-suits.github.io%2Findex.html">Validate my page!</a>
