--- a/amuse.html
+++ b/amuse.html
@@ -4,9 +4,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Amuse Me</title>
+        <style>
+          h1{
+            font-size: 34pt;
+          }
+          h2{
+            font-size: 26pt;
+          }
+        </style>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-      <h1>LOL That's Funny!</h1>
+      <h1 >LOL That's Funny!</h1>
       <h2>The Duck Song</h2>
       <p>The duck song was imprinted in my brain since elementary school and continues to amuse me.</p>
       <a href="https://www.youtube.com/watch?v=MtN1YnoL46Q">Link</a>
@@ -18,6 +27,6 @@
       <a href="https://www.boredpanda.com/hilarious-dogs-pictures/?utm_source=google&utm_medium=organic&utm_campaign=organic">Link</a>
       <br>
       <br>
-      <a href="index.html"><img src="images/button.png" alt="Home Button"></a>
+      <a class="footertext" href="index.html"><img src="images/button.png" alt="Home Button"></a>
     </body>
 </html>
