--- a/inspire.html
+++ b/inspire.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset="UTF-8">
         <title>Inspire Me</title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <h1>Seth Rogan.</h1>
@@ -14,6 +15,6 @@
         <p><a href="https://www.britannica.com/biography/Seth-Rogen">Learn More ...</a></p>
         <br>
         <br>
-        <a href="index.html"><img src="images/button.png" alt="Home Button"></a>
+        <a class="footertext" href="index.html"><img src="images/button.png" alt="Home Button"></a>
     </body>
 </html>
