--- a/superhero.html
+++ b/superhero.html
@@ -24,6 +24,7 @@
                 background-color:darkslategray;
             }
         </style>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <h1>My Favorite Superheroes</h1>
@@ -96,6 +97,6 @@
                 </tr>
             </tbody>
         </table>
-        <a href="index.html"><img src="images/button.png" alt="Home Button"></a>
+        <a class="footertext" href="index.html"><img src="images/button.png" alt="Home Button"></a>
     </body>
 </html>
