--- a/educate.html
+++ b/educate.html
@@ -4,9 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Educate Me</title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1>Educate Me</h1>
+        <h1 class="ted">Educate Me</h1>
         <section>
             <h2>TED Talks</h2>
             <div style="max-width:854px">
@@ -31,6 +32,6 @@
         </section>
         <br>
         <br>
-        <a href="index.html"><img src="images/button.png" alt="Home Button"></a>
+        <a class="footertext" href="index.html"><img src="images/button.png" alt="Home Button"></a>
     </body>
 </html>
