--- a/index.html
+++ b/index.html
@@ -2,7 +2,37 @@
 <html lang="en">
     <head>
       <meta charset="UTF-8">
-        <title>Template</title>
+        <title>Page Title</title>
+        <style>
+            @font-face {
+                font-family: UNCHeading;
+                src: url(css/font/UNCHeading.ttf);
+            }
+            @font-face {
+                font-family: UNCBody;
+                src: url(css/font/UNCBody.ttf);
+            }
+            h1{
+                font-family: UNCHeading, sans-serif;
+                font-size: 5vw;
+                font-weight: normal;
+                text-decoration: underline;
+            }
+            li{
+                font-size: 150%;
+            }
+            p a{
+                font-size: 12pt;
+                font-style: italic;
+            }
+            img{
+                width:30vw;
+            }
+            a{
+                font-family: UNCBody;
+            }
+        </style>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <h1>My homepage</h1>
@@ -21,10 +51,10 @@
             <a href="educate.html">Educate Me</a>
         </li>
         <li>
-            <a href="superhero.html">Favorite Superheroes</a>
+            <a href="superhero.html">Superheroes</a>
         </li>
         </ul>
-        <p>
+        <p class="footertext">
             <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fj-suits.github.io%2Findex.html">Validate my page!</a>
         </p>
     </body>
