--- a/profile.html
+++ b/profile.html
@@ -4,15 +4,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Profile</title>
+        <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1>Jenna Suits</h1>
+        <h1 id="nametitle">Jenna Suits</h1>
         <img src="images/profile.2.png" alt="pic of Jenna Suits" width="300">
-        <div id="interests">
-        <p>I have a dog named Cash, I am a tattoo apprentice, and I like playing videogames.</p>
-        </div>  
+        <section class="interests">
+            <h1>My Interests</h1>>
+            <p>I have a dog named Cash, I am a tattoo apprentice, and I like playing videogames. </p>
+        </section>
         <br>
         <br>
-        <a href="index.html"><img src="images/button.png" alt="Home Button"></a>
+        <a class="footertext" href="index.html"><img src="images/button.png" alt="Home Button"></a>
     </body>
 </html>
